src/GUI/ApacheConfig/iptables
# Generated by iptables-save v1.2.11 on Sat Jan 14 21:06:51 2006
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [237:26508]
:AOS-INPUT - [0:0]
-A INPUT -j AOS-INPUT 
-A FORWARD -j AOS-INPUT 

#accept all the local connections
-A AOS-INPUT -i lo -j ACCEPT 

#accept all the eth1 connections
-A AOS-INPUT -i eth1 -j ACCEPT 

#accept ICMP
-A AOS-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 

#deny 5680 on eth0
-A AOS-INPUT -i eth0 -p tcp --dport 5680 -j REJECT

#deny 5680 on eth0
-A AOS-INPUT -i eth0 -p udp -j REJECT

#ssh on eth1
#-A AOS-INPUT -i eth1 -p tcp --dport 22 -j ACCEPT
#accept http gui through eth1
#-A AOS-INPUT -i eth1 -p tcp --dport 5680 -j ACCEPT
#-A AOS-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 

-A AOS-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 

-A AOS-INPUT -j ACCEPT

COMMIT
